--- a/HelloJSP/pom.xml
+++ b/HelloJSP/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.38</version>
 		</dependency>
+		<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>4.0.1</version>
+		<scope>provided</scope>		
+		</dependency>
 	</dependencies>
 
 	<build>
