--- a/HelloJSP/src/main/webapp/WEB-INF/web.xml
+++ b/HelloJSP/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>HelloJSP</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+  
+  <!-- 서블릿 등록 -->
+  <servlet>
+  <servlet-name>front</servlet-name>
+  <servlet-class>com.yedam.common.FrontController</servlet-class>
+  </servlet>
+  <servlet-mapping><!-- 서블릿을 실행하기 위한 url등록 -->
+  <servlet-name>front</servlet-name>
+  <url-pattern>*.do</url-pattern><!-- url이 .do로 끝나면 위 서블릿네임태그의 클래스를 불러오겠다라는 의미 -->
+  </servlet-mapping>
+  
+  <welcome-file-list>    
+    <welcome-file>index.jsp</welcome-file>    
   </welcome-file-list>
 </web-app>
