--- a/HelloJSP/pom.xml
+++ b/HelloJSP/pom.xml
@@ -33,15 +33,17 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<!-- 콘솔로그에 DB에 보내는 쿼리 내용을 출력하게 만드는 라이브러리
+			 https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.5.18</version>
 			<scope>compile</scope>
 		</dependency>
-	<!-- https://downloads.apache.org/tomcat/taglibs/taglibs-standard-1.2.5/README_bin.txt -->
-	
+		<!-- 톰캣 jsp페이지에 <%%>으로 java 코드 쓰지 않고 태그형식으로 쓸수있게 만드는 라이브러리
+		https://downloads.apache.org/tomcat/taglibs/taglibs-standard-1.2.5/README_bin.txt -->
+
 		<dependency>
 			<groupId>org.apache.taglibs</groupId>
 			<artifactId>taglibs-standard-spec</artifactId>
@@ -51,6 +53,36 @@
 			<groupId>org.apache.taglibs</groupId>
 			<artifactId>taglibs-standard-impl</artifactId>
 			<version>1.2.5</version>
+		</dependency>
+
+		<!-- 멀티데이터 처리해주는 라이브러리인 "cos"
+		 https://mvnrepository.com/artifact/com.servlets/cos -->
+		<dependency>
+			<groupId>com.servlets</groupId>
+			<artifactId>cos</artifactId>
+			<version>05Nov2002</version>
+		</dependency>
+
+
+		<!-- tiles 라이브러리 3개
+		 https://tiles.apache.org/download.html 
+		 여기에 있는거임 => Tiles 3 as a Maven dependency-->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-extras</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-servlet</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>3.0.8</version>
 		</dependency>
 	</dependencies>
 
